trying audio tag

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 </head>
 
 <body>
+	<audio id="audio" src="" preload="auto" controls></audio>
 	<canvas id="canvas"></canvas>
-	<h1 id="play">PLAY</h1>
+	<!-- <h1 id="play">PLAY</h1> -->
 	
 	<script type="module" src="control.js"></script>
 	<script  src="https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js"></script>
