--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-	<audio id="audio" src="" preload="auto" controls></audio>
+	<audio id="audio" src="assets/datawave-latitude.mp3" preload="auto" controls></audio>
 	<canvas id="canvas"></canvas>
 	<!-- <h1 id="play">PLAY</h1> -->
 	
