removed display none for audio

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 </head>
 
 <body>
+	<audio id="song" src=""></audio>
 	<div id="play" class="play-btn"">Play</div>
-	<audio id="song" src="" style="display:none;"></audio>
+	
 	<!-- <audio id="audio" src="assets/datawave-latitude.mp3" preload="auto" controls></audio> -->
 	<canvas id="canvas"></canvas>
 	<!-- <h1 id="play">PLAY</h1> -->
