trying another solution

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 
 <body>
 	<audio id="song" src=""></audio>
-	<div id="play" class="play-btn"">Play</div>
+	<div class="parent">
+		<div id="play" class="play-btn"">Play</div>
+	</div>
+	
 	
 	<!-- <audio id="audio" src="assets/datawave-latitude.mp3" preload="auto" controls></audio> -->
 	<canvas id="canvas"></canvas>
