--- a/index.html
+++ b/index.html
@@ -19,16 +19,10 @@
 </head>
 
 <body>
-	<audio id="song" src=""></audio>
-	<div class="parent">
-		<div id="play" class="play-btn"">Play</div>
-	</div>
-	
-	
-	<!-- <audio id="audio" src="assets/datawave-latitude.mp3" preload="auto" controls></audio> -->
-	<canvas id="canvas"></canvas>
-	<!-- <h1 id="play">PLAY</h1> -->
-	
+	<!-- <audio id="song" src=""></audio> -->
+	<div id="play" class="play-btn"">Play</div>	
+	<!-- <canvas id="canvas"></canvas> -->
+
 	<script type="module" src="control.js"></script>
 	<script  src="https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.js"></script>
