--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<meta name="description" content=""/>
 	<meta name="author" content=""/>
-	
+	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✨</text></svg>"></link>
 	
 	<title>blob</title>
 	<link rel="stylesheet" href="style.css"/>
@@ -19,9 +19,9 @@
 </head>
 
 <body>
-	<!-- <audio id="song" src=""></audio> -->
+	<audio id="song" src=""></audio>
 	<div id="play" class="play-btn"">Play</div>	
-	<!-- <canvas id="canvas"></canvas> -->
+	<canvas id="canvas"></canvas>
 
 	<script type="module" src="control.js"></script>
 	<script  src="https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js"></script>
