--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 
 <body>
-	<!-- <audio id="song" src=""></audio> -->
+	<audio id="song" src=""></audio>
 	<div id="play" class="play-btn"">Play</div>	
-	<!-- <canvas id="canvas"></canvas> -->
+	<canvas id="canvas"></canvas>
 
 	<script type="module" src="control.js"></script>
 	<script  src="https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js"></script>
