--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 </head>
 
 <body>
-	<audio id="song" src=""></audio>
-	<div id="play" class="play-btn"">Play</div>	
+	<audio id="song" src="assets/datawave-latitude.mp3" loop="" crossorigin="anonymous" controls=""></audio>
 	<canvas id="canvas"></canvas>
 
 	<script type="module" src="control.js"></script>
