--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<script  src="https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.js"></script>
 	<script src="https://fariskassim.com/stage/rebel9/teaf/blob/v4/js/perlin.js"></script>
-	<script src="http://cwilso.github.com/AudioContext-MonkeyPatch/AudioContextMonkeyPatch.js"></script>
+	<script src="AudioContextMonkeyPatch.js"></script>
 	
 </body>
 
