FIXED FOR IOS YEEHAW

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+	<button id="initBtn">Initialise</button>
 	<audio id="song" src="assets/datawave-latitude.mp3" loop="" crossorigin="anonymous" controls=""></audio>
 	<canvas id="canvas"></canvas>
 
