--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 </head>
 
 <body>
-	<button id="initBtn">Initialise</button>
-	<audio id="song" src="assets/datawave-latitude.mp3" loop="" crossorigin="anonymous" controls=""></audio>
+	<!-- <button id="initBtn">Initialise</button> -->
+	<button id="play">PLAY</button>
+	<!-- <audio id="song" src="assets/datawave-latitude.mp3" loop="" crossorigin="anonymous" controls=""></audio> -->
 	<canvas id="canvas"></canvas>
 
 	<script type="module" src="control.js"></script>
@@ -28,7 +29,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.js"></script>
 	<script src="https://fariskassim.com/stage/rebel9/teaf/blob/v4/js/perlin.js"></script>
 	<script src="AudioContextMonkeyPatch.js"></script>
-	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.1/howler.min.js"></script>
 </body>
 
 </html>
